--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ aside {
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
